# coding_challenge

./: LICENSE  README.md  classifier_tf.py  config.yaml  customer.ipynb  pyproject.toml  requirements.txt  temp.ipynb
data/: CustomerData_LeadGenerator.csv  sample_temperature_data_for_coding_challenge.csv
